# tonic

./: Cargo.toml
.github/workflows/: CI.yml
benchamark/: Cargo.toml  build.rs
benchamark/src/: benchmark_client.rs  client.rs  common.rs  lib.rs  main.rs  stats.rs
benchmark/: Cargo.toml  Dockerfile  build.rs
benchmark/src/: client.rs  common.rs  lib.rs  main.rs  server.rs
compiler/src/: grpc_rust_generator.cc  grpc_rust_generator.h  grpc_rust_plugin.cc
grpc/: Cargo.toml
grpc-build/src/: lib.rs
grpc/examples/: inmemory.rs  multiaddr.rs
grpc/src/: endpoint.rs  lib.rs  service.rs
grpc/src/client/: subchannel.rs
grpc/src/client/load_balancing/: test_utils.rs
grpc/src/client/name_resolution/: mod.rs
grpc/src/client/name_resolution/dns/: test.rs
grpc/src/client/transport/: mod.rs  tonic.rs
grpc/src/client/transport/tonic/test/: mod.rs
grpc/src/inmemory/: mod.rs
grpc/src/rt/: hyper_wrapper.rs  mod.rs
grpc/src/rt/tokio/: mod.rs
interop/: Cargo.toml  build.rs  test.sh
tonic/: Cargo.toml
tonic/benches/: metadata.rs
tonic/src/: status.rs
tonic/src/client/: grpc.rs
tonic/src/codec/: compression.rs
tonic/src/metadata/: encoding.rs  map.rs  value.rs
